--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/OWLAPI"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JSR-305"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JUnit4.12"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Spark2.0.2"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
