--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jsoup1.10.2"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jung2-2.0.1"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
